--- a/src/components/get-button.css
+++ b/src/components/get-button.css
@@ -5,7 +5,7 @@
 button{
   
     border: none;
-    background: #bbc2c7;
+    background: #117cc7;
     color: white;
     border-radius: .5em;
     padding: .5em .7em;
