--- a/src/components/horoscopelist.css
+++ b/src/components/horoscopelist.css
@@ -1,7 +1,13 @@
 h3{
+  margin-top: 30px;
   text-align:center;
+  font-size: 4em;
+  margin-bottom: .3em;
 }
 
 h4{
   text-align:center;
+  margin-top: 0;
+  font-size: 2.5em;
+  color: rgb(226, 84, 27);
 }
