--- a/client/src/components/nav-bar.css
+++ b/client/src/components/nav-bar.css
@@ -4,10 +4,12 @@ a{
 
 .navigation-bar {
 	/*text-align: center;*/
-	background-color: #e97726;
+	background-color: black;
 	text-align: right;
 	padding: 1px 0;
-	/*position: relative;*/
+      /*position: relative;*/
+      border-bottom: 1px solid white;
+      color:white
   
 }
 
