integrated demo account into app and jwt, styled some

--- a/client/src/components/login-page.css
+++ b/client/src/components/login-page.css
@@ -4,3 +4,17 @@
 .about-us{
     text-align:center;
 }
+
+.aboutUs {
+   width:60%;
+   margin:auto
+}
+.come-heading {
+    margin-bottom:50px;
+}
+
+@media (min-width:1580px) {
+    .aboutUs {
+        width:40px
+    }
+}
