--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,3 +6,30 @@ body {
 }
 
 
+footer {
+	background-color: black;
+	padding-top:5px;
+	text-align:center; 
+	position:fixed;
+	left:0px;
+	bottom:0px;
+	height:30px;
+	width:100%;
+	background:black;
+	color: white; 
+	font-size: 15px;
+	letter-spacing: 2px;
+	margin-top:-25px;
+}
+
+.main-container{
+	height: 100vh;
+	width:100vw;
+}
+
+.link {
+	text-decoration:underline;
+}
+.link:hover {
+	cursor:pointer;
+}
