--- a/client/src/components/login-page.css
+++ b/client/src/components/login-page.css
@@ -13,22 +13,28 @@
     margin-bottom:50px;
 }
 
-
 .email {
     margin-left:38px;
 }
 
 .cpassword {
     margin-left:-55px;
-    display:inline-block
+    display:inline-block;
+    margin-bottom:10px
 }
 
+.btn {
+    margin-top:5px;
+    margin-bottom:50px;
+}
 .signup-outter-box {
-    margin:auto
+    margin:auto;
+    text-align:center,
 }
 
 .password1 {
-    margin-left:7px
+    margin-left:7px;
+    margin-bottom:10px;
 }
 
 .pure-control-group {
