--- a/client/src/components/login-page.css
+++ b/client/src/components/login-page.css
@@ -41,6 +41,11 @@
     margin-bottom:10px;
 }
 
+.form-group1 {
+    margin-left:33px;
+    margin-bottom:15px;
+}
+
 @media only screen and (min-width: 720px){
     .login-button {
         font-size:25px;
