--- a/client/src/index.css
+++ b/client/src/index.css
@@ -33,3 +33,116 @@ footer {
 .link:hover {
 	cursor:pointer;
 }
+.login-box{
+    text-align:center;
+}
+.about-us{
+    text-align:center;
+}
+
+.aboutUs {
+   width:60%;
+   margin:auto
+}
+.come-heading {
+    margin-bottom:50px;
+}
+
+.email {
+    margin-left:38px;
+}
+
+.cpassword {
+    margin-left:-55px;
+    display:inline-block;
+    margin-bottom:10px
+}
+
+.btn {
+    margin-top:5px;
+    margin-bottom:50px;
+}
+.signup-outter-box {
+    margin:auto;
+    text-align:center,
+}
+
+.password1 {
+    margin-left:7px;
+    margin-bottom:10px;
+}
+
+.pure-control-group {
+    margin-bottom:10px;
+}
+
+.form-group1 {
+    margin-left:33px;
+    margin-bottom:15px;
+}
+
+@media only screen and (min-width: 720px){
+    .login-button {
+        font-size:25px;
+    }
+    .start-button{
+        font-size:25px;
+    }
+}
+
+@media only screen and (min-width:1020px) {
+    .login-botton{
+        font-size:2vw;
+    }
+}
+@media only screen and (min-width:1580px) {
+    .aboutUs {
+        width:40px
+    }
+}
+
+@media only screen and (min-width:1199px) {
+    .signup-form {
+        margin-top:60px;
+    }
+    
+}
+
+@media only screen and (max-width: 425px){
+   .form-group1 {
+    margin:auto;
+   }
+
+   .signup-form {
+        width:70%;
+        margin:auto;
+        display:inline-block;
+        margin-top:50px
+   }
+
+   .email {
+    margin:auto;
+    }
+
+    .cpassword {
+        margin:auto;
+
+    }
+
+
+    .password1 {
+        margin:auto;
+    }
+}
+
+@media only screen and (max-width: 540px){
+    .signup-outter-box {
+        text-align:center;
+    }
+
+    .signup-form {}
+
+    h1 {
+        margin-bottom:0
+    }
+}
