--- a/client/public/main.css
+++ b/client/public/main.css
@@ -1,4 +1,27 @@
 
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
 *{
 	font-family: 'Muli', sans-serif;
 }
@@ -15,7 +38,7 @@ footer{
 	color: white; 
     font-size: 15px;
     letter-spacing: 2px;
-    margin-top:-25px;
+    margin-top:50px;
 }
 .main-container{
 	height: 100vh;
